# sqlagent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
ollama/: entrypoint.sh
src/sqlagent/: main.py  model_utils.py
tests/: test_model_utils.py
