[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "sqlagent"
version = "1.0.0"
authors = [
  {name="Bartosz Grabowski", email="58475557+bartosz-grabowski@users.noreply.github.com"},
]
description = "A lightweight open-source LLM agent connected to MySQL database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "fastapi[standard]>=0.118.1",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "ollama>=0.6.1",
    "pymysql>=1.1.2",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/bartosz-grabowski/sqlagent.git"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]
